--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /* Asciidoctor default stylesheet | MIT License | http://asciidoctor.org */
-/* Uncomment @import statement below to use as custom stylesheets */
+/* Uncomment @import statement below to use as custom stylesheet */
 /*@import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";*/
 article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}
 audio,canvas,video{display:inline-block}
@@ -560,6 +560,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#download-war">16.3.1. Download</a></li>
 <li><a href="#install">16.3.2. Install</a></li>
 <li><a href="#run">16.3.3. Run</a></li>
+</ul>
+</li>
+<li><a href="#xslweb-docker">16.4. Installation of XSLWeb inside a Docker container</a>
+<ul class="sectlevel3">
+<li><a href="#requirements">16.4.1. Requirements</a></li>
+<li><a href="#instructions">16.4.2. Instructions</a></li>
 </ul>
 </li>
 </ul>
@@ -5545,6 +5551,50 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="xslweb-docker"><a class="anchor" href="#xslweb-docker"></a><a class="link" href="#xslweb-docker">16.4. Installation of XSLWeb inside a Docker container</a></h3>
+<div class="sect3">
+<h4 id="requirements"><a class="anchor" href="#requirements"></a><a class="link" href="#requirements">16.4.1. Requirements</a></h4>
+<div class="paragraph">
+<p>Install Docker on your computer or server, see <a href="https://docs.docker.com/get-docker/" target="_blank" rel="noopener">Get Docker</a>.</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="instructions"><a class="anchor" href="#instructions"></a><a class="link" href="#instructions">16.4.2. Instructions</a></h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Build the docker image by running <code>build_docker.sh</code> (Linux/macOS) or <code>build_docker.bat</code> (Windows). This runs the Dockerfile to build a local container image using Apache Tomcat version 10.0.14 and OpenJDK version 17.0.1+12.</p>
+</li>
+<li>
+<p>Set the environment variable <code>LOCAL_XSLWEB_HOME</code> to point to your local XSLWeb home directory. This variable is referred to in the Docker Compose configuration file <code>docker-compose.yml</code></p>
+</li>
+<li>
+<p>Run <code>docker-compose up</code> and navigate your browser to <a href="http://localhost:8080" class="bare">http://localhost:8080</a>. If you want to run it in the background, run <code>docker-compose up -d</code>.</p>
+</li>
+<li>
+<p>In <code>Dockerfile</code> you can optionally change the environment variables <code>PORT</code> and <code>CONTEXT_PATH</code>, XSLWeb wil run on <a href="http://localhost:$PORT/$CONTEXT_PATH" class="bare">http://localhost:$PORT/$CONTEXT_PATH</a>.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Some tips:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>The command <code>docker ps</code> will show you the running containers, including their id&#8217;s</p>
+</li>
+<li>
+<p>If you want to log into a container do this: <code>docker exec -it xslweb bash</code></p>
+</li>
+<li>
+<p>If you run in background, and want to tail the log, do this: <code>docker logs xslweb --tail 1000 -f</code></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -5813,7 +5863,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-09 10:29:11 +0100
+Last updated 2021-12-29 12:09:56 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
