Fixed bug in the documentation regarding the query pipeline step.

--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -1050,7 +1050,7 @@ If you have comments, remarks or questions about this manual, please use the <a 
 <div class="title">Query pipeline step</div>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;pipeline:pipeline&gt;
-  &lt;pipeline:transformer name="my-xquery-step" xquery-path="my-query.xq"/&gt;
+  &lt;pipeline:query name="my-xquery-step" xquery-path="my-query.xq"/&gt;
 &lt;/pipeline:pipeline&gt;</code></pre>
 </div>
 </div>
@@ -5895,7 +5895,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-29 17:24:27 +0100
+Last updated 2021-12-31 11:09:37 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
