--- a/xslweb/XSLWeb Developer Manual.html
+++ b/xslweb/XSLWeb Developer Manual.html
@@ -5576,7 +5576,7 @@ After a change to the variable <code>MAXMEM</code> in the file <code>&lt;install
 <li>
 <p>Run the image:</p>
 <div class="paragraph">
-<p><code>docker run -v {XSLWEB-HOME}:/usr/local/xslweb/home -p 8081:8080 --name xslweb-4.1.0 armatiek/xslweb:4.1.0</code></p>
+<p><code>docker run -v {XSLWEB-HOME}:/usr/local/xslweb/home -p 8081:8080 --name xslweb armatiek/xslweb:4.1.0</code></p>
 </div>
 <div class="paragraph">
 <p>where {XSLWEB-HOME} must be changed to your XSLWeb home directory <strong>on your host machine</strong> and port 8080 of the container is bound to TCP port 80 on 127.0.0.1 of your host machine.</p>
@@ -5895,7 +5895,7 @@ or</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-31 11:09:37 +0100
+Last updated 2021-12-31 11:23:39 +0100
 </div>
 </div>
 <link rel="stylesheet" href="highlight/styles/agate.min.css">
